--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,15 @@ li {
     margin-left: 15px;
     margin-right: 15px;
 }
+
+.publish h3{
+    color: #5c100a;
+}
+
+.video{
+    display: flex;
+    width: 75%;
+    margin-left: 100px;
+    margin-right: 50px;
+   
+}
