--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,27 @@ li {
     margin-right: 50px;
    
 }
+
+.features{
+    display: grid;
+    grid-template-columns: repeat(2, 100px); 
+    grid-template-rows: repeat(2, 100px);
+}
+
+article{
+    background-color: #5c100a;
+    margin: 10px;
+    width: 40%;
+    height: 50px;
+}
+
+.features .feature-card {
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: #fdfafa;
+    border: 2px solid #5c100a;
+    display: flex;
+    align-items: center;
+
+}
