--- a/styles.css
+++ b/styles.css
@@ -81,24 +81,72 @@ li {
 
 .features{
     display: grid;
-    grid-template-columns: repeat(2, 100px); 
-    grid-template-rows: repeat(2, 100px);
+    padding: 5% 10%;
+    grid-template-columns: repeat(2, 550px); 
+    grid-template-rows: repeat(2, 300px);
 }
 
-article{
+/* article{
     background-color: #5c100a;
     margin: 10px;
     width: 40%;
     height: 50px;
-}
+} */
 
 .features .feature-card {
     margin-bottom: 30px;
     margin-left: 15px;
     margin-right: 15px;
-    background-color: #fdfafa;
+    background-color: #fcf7f7;
     border: 2px solid #5c100a;
     display: flex;
     align-items: center;
+    overflow: hidden;
 
+}
+
+.features .feature-card .feature-content {
+    padding: 20px 30px 30px 30px;
+    flex: 2;
+    
+}
+
+.features .feature-card .feature-content >*{
+   margin-bottom: 1rem;
+    
+}
+
+.features .feature-card .feature-content img {
+    width: 60px;
+    
+}
+
+.features .feature-card .feature-content h3 {
+    font-size: 20px;
+    color: #e61c0d;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.features .feature-card .feature-content p {
+    font-size: 16px;
+    color: #5c0a0a;
+}
+
+.features .feature-card .feature-content a {
+    font-size: 16px;
+    color: #ED2B00;
+}
+
+.features .feature-card .feature-image img{
+    flex: 1;
+    width: 80%;
+    position: relative;
+    right: -50px;
+    height: 80%;
+}
+
+.features .feature-card .feature-image figure,
+.features .feature-card .feature-image img {
+    margin-top: 0;
+    height: 100%;
 }
