--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,43 @@ li {
     margin-top: 0;
     height: 100%;
 }
+
+
+
+
+
+
+@media (max-width:575px){
+
+    .navbar, .actions{
+        display: none;
+    }
+    h1{
+        font-size: 30px;
+    }
+    main{
+        margin-top: 130px;
+    }
+    
+    
+}
+
+/** dispositivos pequeños en vista landscape (horizontal) */
+@media (min-width: 576px) and (max-width: 767px) {
+  
+}
+
+/** dispositivos medianos (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+  
+}
+
+/** dispositivos grandes (desktops) */
+@media (min-width: 992px) and (max-width: 1199px) {
+  
+}
+
+/** dispositivos extra grandes (monitores grandes, tvs) */
+@media (min-width: 1200px) {
+  
+}
