--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ li {
     width: 75%;
     margin-left: 100px;
     margin-right: 50px;
+    
    
 }
 
@@ -200,6 +201,51 @@ li {
         text-align: center;
     }
 
+    .tarea{
+        display: flex;
+        width: 75%;
+        margin-left: 100px;
+        margin-right: 50px;
+        
+       
+    }
+    
+    .anuncio{
+        display: grid;
+        padding: 5% 10%;
+        grid-template-columns: (1500px); 
+        
+    }
+    .tarea{
+        background-color: #b65050;
+    }
+    
+    .anuncio .feature-anuncio {
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: #f57878;
+    border: 2px solid #5c100a;
+    text-align: center;
+    
+    align-items: center;
+    overflow: hidden;
+    }
+    .anuncio .feature-anuncio .feature-figures img{
+        padding: 30px 30px 30px 30px;
+        flex: 2;
+        margin-bottom: 2rem;
+        width: 100px;
+        align-items: center;
+       
+    }
+
+    .tarea .parrafo h1{
+        font-size: 36px;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        color: #9b0404;
+        text-align: center;
+    }
 
 
 
@@ -212,9 +258,14 @@ li {
     h1{
         font-size: 30px;
     }
+    .features{
+        
+    }
     main{
         margin-top: 130px;
     }
+
+   
     
     
 }
