--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,13 @@ li {
         text-align: center;
     }
 
+    .prueba .h1{
+        font-size: 36px;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        color: #9b0404;
+        text-align: center;
+    }
+
 
 
 
