--- a/styles.css
+++ b/styles.css
@@ -80,11 +80,11 @@ li {
    
 }
 
-.features{
-    display: grid;
-    padding: 5% 10%;
-    grid-template-columns: repeat(2, 550px); 
-    grid-template-rows: repeat(2, 300px);
+.features {
+    display: grid  !important;
+    padding: 5% 10%  !important;
+    grid-template-columns: repeat(2, 550px)  !important; 
+    grid-template-rows: repeat(2, 300px)  !important;
 }
 
 /* article{
@@ -95,74 +95,74 @@ li {
 } */
 
 .features .feature-card {
-    margin-bottom: 30px;
-    margin-left: 15px;
-    margin-right: 15px;
-    background-color: #fcf7f7;
-    border: 2px solid #5c100a;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
+    margin-bottom: 30px  !important;
+    margin-left: 15px  !important;
+    margin-right: 15px  !important;
+    background-color: #fcf7f7  !important;
+    border: 2px solid #5c100a  !important;
+    display: flex  !important;
+    align-items: center  !important;
+    overflow: hidden  !important;
 
 }
 
 .features .feature-card .feature-content {
-    padding: 50px 30px 30px 30px;
-    flex: 2;
+    padding: 50px 30px 30px 30px  !important;
+    flex: 2  !important;
     
 }
 
 .features .feature-card .feature-content >*{
-   margin-bottom: 1rem;
+   margin-bottom: 1rem  !important;
     
 }
 
 .features .feature-card .feature-content img {
-    width: 60px;
+    width: 45px  !important;
     
 }
 
 .features .feature-card .feature-content h3 {
-    font-size: 20px;
-    color: #e61c0d;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px  !important;
+    color: #e61c0d  !important;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif  !important;
 }
 
 .features .feature-card .feature-content p {
-    font-size: 16px;
-    color: #5c0a0a;
+    font-size: 12px  !important;
+    color: #5c0a0a  !important;
 }
 
 .features .feature-card .feature-content a {
-    font-size: 16px;
-    color: #ED2B00;
+    font-size: 10px  !important;
+    color: #ED2B00 !important;
 }
 
 .features .feature-card .feature-image img{
-    flex: 1;
-    width: 80%;
-    position: relative;
-    right: -50px;
-    height: 80%;
+    flex: 1  !important;
+    width: 80%  !important;
+    position: relative  !important;
+    right: -50px  !important;
+    height: 80%  !important;
 }
 
 .features .feature-card .feature-image figure,
 .features .feature-card .feature-image img {
-    margin-top: 0;
-    height: 100%;
+    margin-top: 0  !important;
+    height: 100%  !important;
 }
 
 .examen .examen-features h1{
-    font-size: 30px;
-    font-family: 'Times New Roman', Times, serif;
-    color: #0c0c0c;
+    font-size: 30px  !important;
+    font-family: 'Times New Roman', Times, serif  !important;
+    color: #0c0c0c  !important;
     
     
 }
 .examen .examen-features p{
-    font-size: 15px;
-    font-family: 'Times New Roman', Times, serif;
-    color: #fdfdfd;
+    font-size: 15px  !important;
+    font-family: 'Times New Roman', Times, serif  !important;
+    color: #fdfdfd  !important;
     
     
 }
@@ -174,21 +174,21 @@ li {
     
 }
 .feature .feature-cards {
-    margin-bottom: 60px;
-    margin-left: 30px;
-    margin-right: 15px;
-    background-color: #fd9a9afd;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
+    margin-bottom: 60px !important;
+    margin-left: 30px !important;
+    margin-right: 15px !important;
+    background-color: #fd9a9afd !important;
+    display: flex !important;
+    align-items: center !important;
+    overflow: hidden !important;
 
 }
 
 .feature .feature-cards .feature-figure img{
-        padding: 50px 30px 30px 30px;
-        flex: 2;
-        margin-bottom: 1rem;
-        width: 80px;
+        padding: 50px 30px 30px 30px !important;
+        flex: 2 !important;
+        margin-bottom: 1rem !important;
+        width: 200px !important;
     }
 
     .feature{
@@ -253,7 +253,8 @@ li {
         color: #9b0404;
         text-align: center;
     }
-
+    
+    
 
 
 
